fix(pro:textarea): fix index column cell align-items

--- a/packages/pro/textarea/style/index.less
+++ b/packages/pro/textarea/style/index.less
@@ -57,7 +57,7 @@
 
     &-cell {
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       justify-content: center;
       padding-left: @pro-textarea-index-column-padding-horizontal;
       padding-right: @pro-textarea-index-column-padding-horizontal;
